# AI

./: .gitignore  AGENTS.md  AGENT_CORE_CONTRACT.md  AGENT_SKILL_MAP.md  ARCHITECTURE.md  BUILD.md  CLAUDE.md  CODEX_PLAN.md  FACTORY_SECOND_BRAIN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_DOCS.md  MASTER_PLAN.md  REVIEW.md  column_map.yaml  config.yaml  pyproject.toml  requirements-optional.txt  requirements.txt  run_demo.py
.agent-loop/: brief-contract.md  progress.md  run-log.md
.obsidian/: workspace.json
00_control/: assumptions.md  bottlenecks.md  decisions.md  evaluation_report.md  evidence_log.md  memory_index.md  mission.md  open_questions.md  progress.md  project_scope.md  restart_notes.md  risks.md  run_log.md  success_contract.md  task_queue.md
01_inputs/: source_inventory.md
02_understanding/: data_map.md  extracted_requirements.md  terminology.md
03_design/: architecture.md  assistant_master_plan.md  codex_planning_prompt.md  current_implementation_plan.md  implementation_plan.md  oss_reference_evaluation.md  phase_a_cards.md  phase_b_to_f_cards.md  rollback_plan.md  unified-ingestion-spine.md  validation_plan.md
04_execution/: README.md
05_validation/: error_log.md  issue_tracker.md  quality_checks.md  test_results.md
06_final_outputs/: handover_notes.md  proof_of_completion.md
agent_skills/: audit_and_trust.md  cost_variance_analysis.md  document_evidence_extraction.md  management_reporting.md  spreadsheet_ingestion.md
archive/: CODEX_PLAN.md  IMPLEMENTATION_PLAN_DOCS.md  IMPLEMENTATION_PLAN_SECONDBRAIN.md  RISK_AND_GAPS_AUDIT.md  (+1 more)
(+84 files in other folders)
