[project]
name = "factory-brain"
version = "0.1.0"
description = "Factory Decision Intelligence System — numeric trust loop (Phase 1 vertical slice)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
